"""Criando tabelas requesters, work_orders, history_orders

Revision ID: 5c708e49fb60
Revises: 27eda197a079
Create Date: 2026-04-14 14:52:10.437496

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = '5c708e49fb60'
down_revision = '27eda197a079'
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('requesters',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('name', sa.String(length=100), nullable=False),
    sa.Column('email', sa.String(length=120), nullable=False),
    sa.Column('phone', sa.String(length=20), nullable=False),
    sa.Column('document', sa.String(length=20), nullable=False),
    sa.Column('user_id', sa.Integer(), nullable=True),
    sa.Column('created_at', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['user_id'], ['users.id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('email')
    )
    op.create_table('work_orders',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('date', sa.DateTime(), nullable=True),
    sa.Column('status', sa.String(length=50), nullable=False),
    sa.Column('requester_id', sa.Integer(), nullable=False),
    sa.Column('estimated_delivery_date', sa.DateTime(), nullable=True),
    sa.Column('number', sa.String(length=20), nullable=False),
    sa.Column('public_id', sa.String(length=36), nullable=False),
    sa.Column('final_price', sa.Float(), nullable=True),
    sa.Column('labor_cost', sa.Float(), nullable=True),
    sa.Column('delivered_at', sa.DateTime(), nullable=True),
    sa.Column('is_canceled', sa.Boolean(), nullable=True),
    sa.Column('cancelation_reason', sa.String(length=255), nullable=True),
    sa.Column('description', sa.Text(), nullable=False),
    sa.Column('created_at', sa.DateTime(), nullable=True),
    sa.ForeignKeyConstraint(['requester_id'], ['requesters.id'], ),
    sa.PrimaryKeyConstraint('id'),
    sa.UniqueConstraint('number'),
    sa.UniqueConstraint('public_id')
    )
    op.create_table('history_orders',
    sa.Column('id', sa.Integer(), nullable=False),
    sa.Column('old_status', sa.String(length=50), nullable=True),
    sa.Column('new_status', sa.String(length=50), nullable=False),
    sa.Column('description', sa.String(length=255), nullable=True),
    sa.Column('changed_at', sa.DateTime(), nullable=True),
    sa.Column('work_order_id', sa.Integer(), nullable=False),
    sa.ForeignKeyConstraint(['work_order_id'], ['work_orders.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.drop_table('history_orders')
    op.drop_table('work_orders')
    op.drop_table('requesters')
    # ### end Alembic commands ###
